// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-text > should convert v-text to textContent 1`] = `
"import { template as _template, children as _children, renderEffect as _renderEffect, setText as _setText } from 'vue/vapor';

const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [n1],} = _children(n0)
  _renderEffect(() => _setText(n1, _ctx.str))
  return n0
}"
`;

exports[`v-text > should raise error and ignore children when v-text is present 1`] = `
"import { template as _template, children as _children, renderEffect as _renderEffect, setText as _setText } from 'vue/vapor';

const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [n1],} = _children(n0)
  _renderEffect(() => _setText(n1, _ctx.test))
  return n0
}"
`;

exports[`v-text > should raise error if has no expression 1`] = `
"import { template as _template, children as _children, setText as _setText } from 'vue/vapor';

const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  const { 0: [n1],} = _children(n0)
  _setText(n1, "")
  return n0
}"
`;
